--- a/series.conf
+++ b/series.conf
@@ -55761,6 +55761,7 @@
 	patches.suse/USB-rename-USB-quirk-to-USB_QUIRK_ENDPOINT_IGNORE.patch
 	patches.suse/usbip-tools-fix-module-name-in-man-page.patch
 	patches.suse/USB-sisusbvga-Fix-a-potential-UB-casued-by-left-shif.patch
+	patches.suse/usb-gadget-net2280-fix-memory-leak-on-probe-error-ha.patch
 	patches.suse/USB-iowarrior-fix-up-report-size-handling-for-some-d.patch
 	patches.suse/USB-serial-cp210x-enable-usb-generic-throttle-unthro.patch
 	patches.suse/USB-serial-cp210x-re-enable-auto-RTS-on-open.patch
