--- a/series.conf
+++ b/series.conf
@@ -54836,6 +54836,7 @@
 	patches.suse/staging-vt6656-Fix-drivers-TBTT-timing-counter.patch
 	patches.suse/staging-vt6656-Fix-pairwise-key-entry-save.patch
 	patches.suse/staging-comedi-Fix-comedi_device-refcnt-leak-in-come.patch
+	patches.suse/vt-don-t-hardcode-the-mem-allocation-upper-bound.patch
 	patches.suse/tty-rocket-avoid-OOB-access.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
