--- a/series.conf
+++ b/series.conf
@@ -56807,6 +56807,7 @@
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/PCI-Fix-pci_slot_release-NULL-pointer-dereference.patch
 	patches.suse/0007-md-cluster-block-reshape-with-remote-resync-job.patch
+	patches.suse/0008-md-cluster-fix-deadlock-when-node-is-doing-resync-jo.patch
 	patches.suse/scsi-Remove-unneeded-break-statements.patch
 	patches.suse/scsi-lpfc-Fix-invalid-sleeping-context-in-lpfc_sli4_.patch
 	patches.suse/scsi-lpfc-Fix-scheduling-call-while-in-softirq-conte.patch
