--- a/series.conf
+++ b/series.conf
@@ -55580,6 +55580,7 @@
 	patches.suse/KVM-PPC-Book3S-PR-Remove-uninitialized_var-usage.patch
 	patches.suse/0015-md-raid0-linear-fix-dereference-before-null-check-on.patch
 	patches.suse/0001-md-cluster-fix-wild-pointer-of-unlock_all_bitmaps.patch
+	patches.suse/0002-md-cluster-fix-safemode_delay-value-when-converting-.patch
 	patches.suse/0001-bcache-allocate-meta-data-pages-as-compound-pages.patch
 	patches.suse/0017-bcache-fix-overflow-in-offset_to_stripe.patch
 	patches.suse/nvme-fc-set-max_segments-to-lldd-max-value.patch
