--- a/series.conf
+++ b/series.conf
@@ -56953,6 +56953,7 @@
 	patches.suse/can-peak_usb-fix-potential-integer-overflow-on-shift.patch
 	patches.suse/can-m_can-m_can_handle_state_change-fix-state-change.patch
 	patches.suse/can-m_can-m_can_stop-set-device-to-software-init-mod.patch
+	patches.suse/bnxt_en-read-EEPROM-A2h-address-using-page-0.patch
 	patches.suse/qed-fix-error-return-code-in-qed_iwarp_ll2_start.patch
 	patches.suse/inet_diag-Fix-error-path-to-cancel-the-meseage-in-in.patch
 	patches.suse/page_frag-Recover-from-memory-pressure.patch
