--- a/series.conf
+++ b/series.conf
@@ -55038,6 +55038,7 @@
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
 	patches.suse/i40iw-Fix-error-handling-in-i40iw_manage_arp_cache.patch
 	patches.suse/IB-mlx4-Test-return-value-of-calls-to-ib_get_cached_.patch
+	patches.suse/RDMA-iw_cxgb4-Fix-incorrect-function-parameters.patch
 	patches.suse/Revert-ipv6-add-mtu-lock-check-in-__ip6_rt_update_pm.patch
 	patches.suse/net-fix-a-potential-recursive-NETDEV_FEAT_CHANGE.patch
 	patches.suse/dpaa2-eth-prevent-array-underflow-in-update_cls_rule.patch
