--- a/series.conf
+++ b/series.conf
@@ -55127,6 +55127,7 @@
 	patches.suse/mac80211-mesh-fix-discovery-timer-re-arming-issue-cr.patch
 	patches.suse/net-check-untrusted-gso_size-at-kernel-entry.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-LE910C1-EUX-composition.patch
+	patches.suse/bnxt_en-Fix-accumulation-of-bp-net_stats_prev.patch
 	patches.suse/crypto-chelsio-chtls-properly-set-tp-lsndtime.patch
 	patches.suse/vsock-fix-timeout-in-vsock_accept.patch
 	patches.suse/net-be-more-gentle-about-silly-gso-requests-coming-f.patch
